force-app/main/default/objects/position__c/fields/approver_1__c.field-meta.xml
<CustomField>
    <fullName>approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>approver#1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>positions</relationshipName>
    <type>Lookup</type>
</CustomField>