force-app/main/default/objects/position__c/fields/approver_2__c.field-meta.xml
<CustomField>
    <fullName>approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>approver#2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>positions1</relationshipName>
    <type>Lookup</type>
</CustomField>