force-app/main/default/objects/position__c/fields/approver_3__c.field-meta.xml
<CustomField>
    <fullName>approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>approver#3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>positions2</relationshipName>
    <type>Lookup</type>
</CustomField>