force-app/main/default/objects/position__c/fields/date_closed__c.field-meta.xml
<CustomField>
    <fullName>date_closed__c</fullName>
    <label>date closed</label>
    <type>DateTime</type>
</CustomField>