force-app/main/default/objects/position__c/fields/date_opened__c.field-meta.xml
<CustomField>
    <fullName>date_opened__c</fullName>
    <label>date opened</label>
    <type>DateTime</type>
</CustomField>