force-app/main/default/objects/position__c/fields/days_opened__c.field-meta.xml
<CustomField>
    <fullName>days_opened__c</fullName>
    <formula>if(
    ispickval(status__c,&quot;open&quot;),round(now()-  date_opened__c,0)
, round(date_closed__c - date_opened__c,0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>days opened</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>