force-app/main/default/objects/position__c/fields/department__c.field-meta.xml
<CustomField>
    <fullName>department__c</fullName>
    <label>department</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>record_type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-finance</fullName>
            </value>
            <value>
                <fullName>-support</fullName>
            </value>
            <value>
                <fullName>-sales</fullName>
            </value>
            <value>
                <fullName>-engineering</fullName>
            </value>
            <value>
                <fullName>-it</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>