force-app/main/default/objects/position__c/fields/duration__c.field-meta.xml
<CustomField>
    <fullName>duration__c</fullName>
    <label>duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>