force-app/main/default/objects/position__c/fields/education__c.field-meta.xml
<CustomField>
    <fullName>education__c</fullName>
    <label>education</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>