force-app/main/default/objects/position__c/fields/hello__c.field-meta.xml
<CustomField>
    <fullName>hello__c</fullName>
    <label>hello</label>
    <length>10</length>
    <type>Text</type>
</CustomField>