force-app/main/default/objects/position__c/fields/hiring_manager__c.field-meta.xml
<CustomField>
    <fullName>hiring_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>hiring manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>positions3</relationshipName>
    <type>Lookup</type>
</CustomField>