force-app/main/default/objects/position__c/fields/job_description__c.field-meta.xml
<CustomField>
    <fullName>job_description__c</fullName>
    <label>job description</label>
    <type>TextArea</type>
</CustomField>