force-app/main/default/objects/position__c/fields/location__c.field-meta.xml
<CustomField>
    <fullName>location__c</fullName>
    <label>location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-san francisco,CA</fullName>
            </value>
            <value>
                <fullName>-newyork,NY</fullName>
            </value>
            <value>
                <fullName>-atlanta,GA</fullName>
            </value>
            <value>
                <fullName>-london,England</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>