force-app/main/default/objects/position__c/fields/max_pay__c.field-meta.xml
<CustomField>
    <fullName>max_pay__c</fullName>
    <label>max pay</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>