force-app/main/default/objects/position__c/fields/min_pay__c.field-meta.xml
<CustomField>
    <fullName>min_pay__c</fullName>
    <label>min pay</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>