force-app/main/default/objects/position__c/fields/number_of_interviews__c.field-meta.xml
<CustomField>
    <fullName>number_of_interviews__c</fullName>
    <label>number of interviews</label>
    <summaryForeignKey>interviewer__c.position__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>