force-app/main/default/objects/position__c/fields/operating_systems__c.field-meta.xml
<CustomField>
    <fullName>operating_systems__c</fullName>
    <label>operating systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-windows</fullName>
            </value>
            <value>
                <fullName>-mac</fullName>
            </value>
            <value>
                <fullName>-linux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>