force-app/main/default/objects/position__c/fields/pay_grade__c.field-meta.xml
<CustomField>
    <fullName>pay_grade__c</fullName>
    <label>pay grade</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-ACT-100</fullName>
            </value>
            <value>
                <fullName>-ACT-200</fullName>
            </value>
            <value>
                <fullName>-ACT-300</fullName>
            </value>
            <value>
                <fullName>-ACT-400</fullName>
            </value>
            <value>
                <fullName>-s-100</fullName>
            </value>
            <value>
                <fullName>-s-200</fullName>
            </value>
            <value>
                <fullName>-s-300</fullName>
            </value>
            <value>
                <fullName>-s-400</fullName>
            </value>
            <value>
                <fullName>-C-100</fullName>
            </value>
            <value>
                <fullName>-C-200</fullName>
            </value>
            <value>
                <fullName>-C-300</fullName>
            </value>
            <value>
                <fullName>-C-400</fullName>
            </value>
            <value>
                <fullName>-ENG-100</fullName>
            </value>
            <value>
                <fullName>-ENG-200</fullName>
            </value>
            <value>
                <fullName>-ENG-300</fullName>
            </value>
            <value>
                <fullName>-ENG-400</fullName>
            </value>
            <value>
                <fullName>-IT-100</fullName>
            </value>
            <value>
                <fullName>_IT-200</fullName>
            </value>
            <value>
                <fullName>-IT-300</fullName>
            </value>
            <value>
                <fullName>-IT-400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>