force-app/main/default/objects/position__c/fields/programming_languages__c.field-meta.xml
<CustomField>
    <fullName>programming_languages__c</fullName>
    <label>programming languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-java</fullName>
            </value>
            <value>
                <fullName>-dot net</fullName>
            </value>
            <value>
                <fullName>-fortran</fullName>
            </value>
            <value>
                <fullName>-cobal</fullName>
            </value>
            <value>
                <fullName>-php</fullName>
            </value>
            <value>
                <fullName>-perl</fullName>
            </value>
            <value>
                <fullName>-python</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>