force-app/main/default/objects/position__c/fields/record_type__c.field-meta.xml
<CustomField>
    <fullName>record_type__c</fullName>
    <label>record type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-non technical position</fullName>
            </value>
            <value>
                <fullName>-technical position</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>