force-app/main/default/objects/position__c/fields/responsibilities__c.field-meta.xml
<CustomField>
    <fullName>responsibilities__c</fullName>
    <label>responsibilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>