force-app/main/default/objects/position__c/fields/skills_required__c.field-meta.xml
<CustomField>
    <fullName>skills_required__c</fullName>
    <label>skills required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>