force-app/main/default/objects/position__c/fields/sub_status__c.field-meta.xml
<CustomField>
    <fullName>sub_status__c</fullName>
    <label>sub status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-pending</fullName>
            </value>
            <value>
                <fullName>-approved</fullName>
            </value>
            <value>
                <fullName>-not approved</fullName>
            </value>
            <value>
                <fullName>-filled</fullName>
            </value>
            <value>
                <fullName>-cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>